<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/mediumPadding"
    android:paddingTop="@dimen/mediumPadding"
    android:paddingEnd="@dimen/mediumPadding"
    android:paddingBottom="@dimen/largePadding"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/mainTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_textview_quizapptitle"/>

            <TextView
                style="@style/normalTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_description_app"/>

            <android.support.v7.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largePadding">

                <LinearLayout
                    style="@style/linearlayoutCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/normalBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_textview_firstquestion"/>

                    <EditText
                        android:id="@+id/edittext_firstquestion"
                        style="@style/editTextFirstQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largePadding">

                <LinearLayout
                    style="@style/linearlayoutCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/normalBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_textview_secondquestion"/>

                    <RadioGroup
                        android:id="@+id/radiogroup_secodquestion"
                        style="@style/radiogroupSecondQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radiobutton_secondquestion_firstoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_radiobutton_secondquestion_firstoption"/>
                        <RadioButton
                            android:id="@+id/radiobutton_secondquestion_secondoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_radiobutton_secondquestion_secondoption"/>
                        <RadioButton
                            android:id="@+id/radiobutton_secondquestion_thirdoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_radiobutton_secondquestion_thirdoption"/>
                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largePadding">

                <LinearLayout
                    style="@style/linearlayoutCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/normalBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_textview_thirdquestion"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/mediumMargin">

                        <CheckBox
                            android:id="@+id/checkbox_thirdquestion_firstoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_checkbox_thirdquestion_firstoption"/>
                        <CheckBox
                            android:id="@+id/checkbox_thirdquestion_secondoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_checkbox_thirdquestion_secondoption"/>
                        <CheckBox
                            android:id="@+id/checkbox_thirdquestion_thirdoption"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/msg_checkbox_thirdquestion_thirdoption"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largePadding">

                <LinearLayout
                    style="@style/linearlayoutCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/normalBodyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_textview_fourthquestion"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_fourthquestion"
                        style="@style/Widget.AppCompat.CompoundButton.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/largeMargin"
                android:text="@string/msg_button_confirmform" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>